2008-10-03  kitone  <kitone@gna.org>

	* src/gui/DialogFileChooser.h:
	* src/gui/DialogUtility.cc:
	Remove header unused.

2008-09-29  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Remove find_and_replace function.

	* src/SubtitleFormat.cc:
	* src/actions/ConfigureKeyboardShortcuts.cc:
	* src/actions/ExternalVideoPlayer.cc:
	Use utility::replace function.


2008-09-29  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Add function replace (utility namespace).

2008-09-29  kitone  <kitone@gna.org>

	* src/Encodings.cc:
	* src/Encodings.h:
	Add function convert_from_utf8_to_charset.

2008-09-28  kitone  <kitone@gna.org>

	* src/gui/ComboBoxEncoding.cc:
	Fix: set_value doesn't work.

2008-09-26  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Fix: missing file PreferencePage.h.

2008-09-25  kitone  <kitone@gna.org>

	* src/utility.h:
	Fix: debug msg (from_string).

2008-09-25  kitone  <kitone@gna.org>

	* src/Encodings.cc:
	* src/Encodings.h:
	Add functions convert_to_utf8_from_charset and convert_to_utf8.

2008-09-25  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-09-25  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.24.1 release.

2008-09-25  kitone  <kitone@gna.org>

	* src/formats/SubtitleSubRip.cc:
	Fix: newline at opening (Unix) patch by spirit.
	
	* src/utility.cc:
	* src/utility.h:
	Remove trim_right function patch by spirit.

2008-09-25  kitone  <kitone@gna.org>

	* src/actions/preferences/VideoPlayerPage.h:
	Fix: ComboBox output bug (translation).

2008-09-25  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Add option [encoding: UTF-8].

2008-09-23  kitone  <kitone@gna.org>

	* src/Subtitle.cc:
	* src/utility.cc:
	* src/utility.h:
	Fix #12347 : Wrong line length and characters per second. 
	patch by John D. (spirit)

2008-09-23  kitone  <kitone@gna.org>

	* src/GtkUtility.cc:
	* src/GtkUtility.h:
	* src/gui/SpinButtonTime.cc:
	* src/gui/SpinButtonTime.h: