@@ -1,5 +1,11 @@
 2008-10-03  kitone  <kitone@gna.org>
 
+	* src/TimeUtility.cc:
+	* src/TimeUtility.h:
+	Add function get_framerate_from_value.
+
+2008-10-03  kitone  <kitone@gna.org>
+
 	* src/gui/DialogFileChooser.h:
 	* src/gui/DialogUtility.cc:
 	Remove header unused.
